2010-02-21  Benjamin Mack  <benni@typo3.org>

	* Fixed #11608: t3lib_beFunc::viewOnClick - Extract logic to find the right frontend domain (Thanks to Michael Klapper)
	* Fixed #12201: Replace header(Location:) with t3lib_div::redirect() (Thanks to Steffen Gebert)

2010-02-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12220: String literals quoted as identifiers

2010-02-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #7501: Remove Static-Templates from standard installation (Update class was declared twice, thanks to Susanne Moog)

2010-02-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13568: ExtDirect - API generator should built absolute links (Thanks to Stefan Galinski)
	* Fixed bug #13333: Datepicker button color is wrong

2010-02-20  Benjamin Mack  <benni@typo3.org>

	* Fixed #7501: Remove Static-Templates from standard installation (Thanks to Steffen Ritter)

2010-02-20  Oliver Hader  <oliver@typo3.org>

	* Added feature #13428: Caching of the ExtDirect API configuration (Thanks to Stefan Galinski)
	* Follow-up to feature #13428: Extended generation of the caching hash
	* Added feature #13164: CLI processes cannot be executed when adminOnly mode is enabled

2010-02-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12007: Docblock comments in TCEforms suggest class are wrong (Thanks to Andreas Wolf)
	* Fixed bug #12870: Login News missing styling for links (Thanks to Steffen Gebert)
	* Added feature #13131: Add API to add stylesheet directories (Thanks to Steffen Gebert)

2010-02-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #13448: Do not unset $typo3CacheFactory singleton

2010-02-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.0 to 1.1.1
	* Fixed bug #12829: ALTER TABLE is not able to parse length restriction in index creation

2010-02-14  Andreas Otto  <andreas@otto-hanika.de>

	* Fixed bug #13380: Recursive deletion of alternative page languages
